--- a/css/styles.css
+++ b/css/styles.css
@@ -11421,6 +11421,11 @@ header.masthead {
   background-position: center center;
   background-size: cover; */
 }
+@media only screen and (min-width: 360px) {
+  #myVideo {
+    height: 400px;
+  }
+}
 #myVideo {
   width: 100vw;
   height: 100vh;
